--- a/_config.yml
+++ b/_config.yml
@@ -25,7 +25,7 @@ your_city                                 : South Korea
 email_address                             : taufichrizqi@gmail.com
 facebook_username                         :                                           
 instagram_username                        : rizqi_nova
-twitter_username                          : @FTaufich
+twitter_username                          : FTaufich
 github_username                           : suwung-inc
 youtube_username                          :
 
