--- a/_config.yml
+++ b/_config.yml
@@ -4,13 +4,14 @@ page_title                                : Web AR                              
 # App Info
 ios_app_id                                : 08081992                                # Required. Enter iOS app ID to automatically populate name, price and icons (e.g. 718043190).
 
-appstore_link                             :                                           # Automatically populates if not set and if iOS app ID is set. Otherwise enter manually.
-playstore_link                            :                                           # Enter Google Play Store URL.
+appstore_link                             : https://drive.google.com/open?id=13_l3Z7Ylq64xNisq7tkyil3owdpZIfpX                                          # Automatically populates if not set and if iOS app ID is set. Otherwise enter manually.
+playstore_link                            : https://drive.google.com/open?id=13_l3Z7Ylq64xNisq7tkyil3owdpZIfpX                                          # Enter Google Play Store URL.
 presskit_download_link                    : https://suwung-inc.github.io                                          # Enter a link to downloadable file or (e.g. public Dropbox link to a .zip file). 
                                                                                       # Or upload your press kit file to assets and set path accordingly (e.g. "assets/your_press_kit.zip").
 
 app_icon                                  : assets/cutes.png                      # Automatically populates if not set and if iOS app ID is set.  Otherwise enter path to icon file manually.
-app_name                                  : Web AR Puzzle Game                                          # Automatically populates if not set and if iOS app ID is set.  Otherwise enter manually.
+app_name                                  : Web AR Puzzle Game
+                                            WTF License                           # Automatically populates if not set and if iOS app ID is set.  Otherwise enter manually.
 app_price                                 :                                           # Automatically populates if not set and if iOS app ID is set.  Otherwise enter manually.
 app_description                           : Web Augmented Reality Game Puzzle Of Skeleton.
 
@@ -24,7 +25,7 @@ your_link                                 : https://suwung-inc.github.io
 your_city                                 : South Korea                                
 email_address                             : taufichrizqi@gmail.com
 facebook_username                         :                                           
-instagram_username                        : rizqi_nova
+instagram_username                        : rizky_novaa
 twitter_username                          : FTaufich
 github_username                           : suwung-inc
 youtube_username                          :
