--- a/_config.yml
+++ b/_config.yml
@@ -10,9 +10,8 @@ presskit_download_link                    : https://suwung-inc.github.io        
                                                                                       # Or upload your press kit file to assets and set path accordingly (e.g. "assets/your_press_kit.zip").
 
 app_icon                                  : assets/cutes.png                      # Automatically populates if not set and if iOS app ID is set.  Otherwise enter path to icon file manually.
-app_name                                  : Web AR Puzzle Game
-                                            WTF License                           # Automatically populates if not set and if iOS app ID is set.  Otherwise enter manually.
-app_price                                 :                                           # Automatically populates if not set and if iOS app ID is set.  Otherwise enter manually.
+app_name                                  : Web AR Puzzle Game                    # Automatically populates if not set and if iOS app ID is set.  Otherwise enter manually.
+app_price                                 : Freely Available - WTF License                                          # Automatically populates if not set and if iOS app ID is set.  Otherwise enter manually.
 app_description                           : Web Augmented Reality Game Puzzle Of Skeleton.
 
 enable_smart_app_banner                   : true                                      # Set to true to show a smart app banner at top of page on mobile devices.
