--- a/_config.yml
+++ b/_config.yml
@@ -9,7 +9,7 @@ playstore_link                            : https://drive.google.com/open?id=13_
 presskit_download_link                    : https://suwung-inc.github.io                                          # Enter a link to downloadable file or (e.g. public Dropbox link to a .zip file). 
                                                                                       # Or upload your press kit file to assets and set path accordingly (e.g. "assets/your_press_kit.zip").
 
-app_icon                                  : assets/cutes.png                      # Automatically populates if not set and if iOS app ID is set.  Otherwise enter path to icon file manually.
+app_icon                                  : assets/appicon.png                      # Automatically populates if not set and if iOS app ID is set.  Otherwise enter path to icon file manually.
 app_name                                  : Web AR Puzzle Game                    # Automatically populates if not set and if iOS app ID is set.  Otherwise enter manually.
 app_price                                 : Freely Available - WTF License                                          # Automatically populates if not set and if iOS app ID is set.  Otherwise enter manually.
 app_description                           : Web Augmented Reality Game Puzzle Of Skeleton.
