--- a/_config.yml
+++ b/_config.yml
@@ -2,7 +2,7 @@
 page_title                                : Web AR                                        # Automatically populates with app name if not set and if iOS app ID is set. Otherwise enter manually.
 
 # App Info
-ios_app_id                                : https://suwungtandon.github.io/page-web-ar/changelog/assets/appicon.png/                               # Required. Enter iOS app ID to automatically populate name, price and icons (e.g. 718043190).
+ios_app_id                                : https://suwungtandon.github.io/page-web-ar/assets/appicon.png                               # Required. Enter iOS app ID to automatically populate name, price and icons (e.g. 718043190).
 
 appstore_link                             : https://drive.google.com/open?id=13_l3Z7Ylq64xNisq7tkyil3owdpZIfpX                                          # Automatically populates if not set and if iOS app ID is set. Otherwise enter manually.
 playstore_link                            : https://drive.google.com/open?id=13_l3Z7Ylq64xNisq7tkyil3owdpZIfpX                                          # Enter Google Play Store URL.
