--- a/_config.yml
+++ b/_config.yml
@@ -4,7 +4,7 @@ page_title                                : Web AR                              
 # App Info
 ios_app_id                                : 1473085588                               # Required. Enter iOS app ID to automatically populate name, price and icons (e.g. 718043190).
 
-appstore_link                             : https://drive.google.com/open?id=13_l3Z7Ylq64xNisq7tkyil3owdpZIfpX                                          # Automatically populates if not set and if iOS app ID is set. Otherwise enter manually.
+appstore_link                             : https://suwung-inc.github.io/puzzleAR/                                          # Automatically populates if not set and if iOS app ID is set. Otherwise enter manually.
 playstore_link                            : https://drive.google.com/open?id=13_l3Z7Ylq64xNisq7tkyil3owdpZIfpX                                          # Enter Google Play Store URL.
 presskit_download_link                    : https://suwung-inc.github.io                                          # Enter a link to downloadable file or (e.g. public Dropbox link to a .zip file). 
                                                                                       # Or upload your press kit file to assets and set path accordingly (e.g. "assets/your_press_kit.zip").
@@ -34,40 +34,40 @@ youtube_username                          :
 # Feature List                            Edit, add or remove features to be presented.
 features                                  :
 
-  - title                                 : GitHub Pages Jekyll Theme
-    description                           : Designed for GitHub Pages. Fork. Edit _config.yml. Upload screenshot/video. Push to gh-pages branch. Voilá!
+  - title                                 : No App Download
+    description                           : I'M NOT TYPE WRITER.
     fontawesome_icon_name                 : magic
     
   - title                                 : iPhone Device Preview
-    description                           : Preview your app in the context of an iPhone device. Five different device colors included.
+    description                           : I'M NOT TYPE WRITER.
     fontawesome_icon_name                 : mobile
 
-  - title                                 : Video Support
-    description                           : Preview app video on the iPhone device simply by placing your video files in the videos folder.
+  - title                                 : Android Device Preview
+    description                           : I'M NOT TYPE WRITER.
     fontawesome_icon_name                 : play-circle
 
-  - title                                 : Automatic Icon and Metadata
-    description                           : Enter iOS app ID in the _config.yml file to automatically fetch app icon, price and App Store Link.
+  - title                                 : Desktop Preview
+    description                           : I'M NOT TYPE WRITER.
     fontawesome_icon_name                 : sync
 
-  - title                                 : Easy to Tweak
-    description                           : Tweak accent color, images, icons and transparency via the _config.yml file. No HTML/CSS needed.
+  - title                                 : Support Any Web Browser
+    description                           : I'M NOT TYPE WRITER.
     fontawesome_icon_name                 : adjust
   
   - title                                 : Feature List
-    description                           : Add features (like this one) to your site via the _config.yml file. No HTML/CSS needed.
+    description                           : I'M NOT TYPE WRITER.
     fontawesome_icon_name                 : star
 
-  - title                                 : Smart App Banner
-    description                           : Display a smart app banner on iOS devices.
+  - title                                 : Fully Performance
+    description                           : I'M NOT TYPE WRITER.
     fontawesome_icon_name                 : arrow-alt-circle-down
 
-  - title                                 : Social Links
-    description                           : Easily add social media accounts and contact info in the footer via the _config.yml file. No HTML/CSS needed.
+  - title                                 : Whatever
+    description                           : I'M NOT TYPE WRITER.
     fontawesome_icon_name                 : link
 
-  - title                                 : FontAwesome Support
-    description                           : Pick custom Font Awesome icons for the feature list via the _config.yml file. No HTML/CSS needed.
+  - title                                 : Keep Calm
+    description                           : I'M NOT TYPE WRITER.
     fontawesome_icon_name                 : info-circle
 
   - title                                 : # New Feature Title
