--- a/_config.yml
+++ b/_config.yml
@@ -35,7 +35,7 @@ youtube_username                          :
 features                                  :
 
   - title                                 : No App Download
-    description                           : I'M NOT TYPE WRITER.
+    description                           : I'm not writer. There goes my heart beating Cause you are the reason I'm losing my sleep Please come back now
     fontawesome_icon_name                 : magic
     
   - title                                 : iPhone Device Preview
@@ -43,15 +43,15 @@ features                                  :
     fontawesome_icon_name                 : mobile
 
   - title                                 : Android Device Preview
-    description                           : I'M NOT TYPE WRITER.
+    description                           : I'm not writer. There goes my mind racin And you are the reason That I'm still breathing I'm hopeless now
     fontawesome_icon_name                 : play-circle
 
   - title                                 : Desktop Preview
-    description                           : I'M NOT TYPE WRITER.
+    description                           : I'm not writer. I'd climb every mountain And swim every ocean Just to be with you And fix what I've broken Oh, cause I need you to see That you are the reason
     fontawesome_icon_name                 : sync
 
   - title                                 : Support Any Web Browser
-    description                           : I'M NOT TYPE WRITER.
+    description                           : I'm not writer. There goes my hands shaking And you are the reason My heart keeps bleeding I need you now
     fontawesome_icon_name                 : adjust
   
   - title                                 : Feature List
@@ -59,15 +59,15 @@ features                                  :
     fontawesome_icon_name                 : star
 
   - title                                 : Fully Performance
-    description                           : I'M NOT TYPE WRITER.
+    description                           : I'm not writer. If I could turn back the clock I'd make sure the light defeated the dark I'd spend every hour, of every day Keeping you safe
     fontawesome_icon_name                 : arrow-alt-circle-down
 
   - title                                 : Whatever
-    description                           : I'M NOT TYPE WRITER.
+    description                           : I'm not writer. I'd climb every mountain And swim every ocean Just to be with you And fix what I've broken Oh, cause I need you to see That you are the reason
     fontawesome_icon_name                 : link
 
   - title                                 : Keep Calm
-    description                           : I'M NOT TYPE WRITER.
+    description                           : I'm not writer. I don't wanna fight no more I don't wanna hide no more I don't wanna cry no more Come back I need you to hold me (You are the reason) Come a little closer now Just a little closer now Come a little closer I need you to hold me tonight
     fontawesome_icon_name                 : info-circle
 
   - title                                 : # New Feature Title
