--- a/_config.yml
+++ b/_config.yml
@@ -39,7 +39,7 @@ features                                  :
     fontawesome_icon_name                 : magic
     
   - title                                 : iPhone Device Preview
-    description                           : I'M NOT TYPE WRITER.
+    description                           : I'm not writer. I'd climb every mountain And swim every ocean Just to be with youAnd fix what I've broken Cause I need you to see That you are the reason
     fontawesome_icon_name                 : mobile
 
   - title                                 : Android Device Preview
