--- a/_config.yml
+++ b/_config.yml
@@ -55,7 +55,7 @@ features                                  :
     fontawesome_icon_name                 : adjust
   
   - title                                 : Feature List
-    description                           : I'M NOT TYPE WRITER.
+    description                           : I'm not writer. The song was meant to be different at the beginning of writing process, telling the story of obstacles in love, but it transformed to be a beautiful ballad because love excels all of them after all.
     fontawesome_icon_name                 : star
 
   - title                                 : Fully Performance
