--- a/_config.yml
+++ b/_config.yml
@@ -35,39 +35,39 @@ youtube_username                          :
 features                                  :
 
   - title                                 : No App Download
-    description                           : I'm not writer. There goes my heart beating Cause you are the reason I'm losing my sleep Please come back now
+    description                           : 
     fontawesome_icon_name                 : magic
     
   - title                                 : iPhone Device Preview
-    description                           : I'm not writer. I'd climb every mountain And swim every ocean Just to be with youAnd fix what I've broken Cause I need you to see That you are the reason
+    description                           : 
     fontawesome_icon_name                 : mobile
 
   - title                                 : Android Device Preview
-    description                           : I'm not writer. There goes my mind racin And you are the reason That I'm still breathing I'm hopeless now
+    description                           : 
     fontawesome_icon_name                 : play-circle
 
   - title                                 : Desktop Preview
-    description                           : I'm not writer. I'd climb every mountain And swim every ocean Just to be with you And fix what I've broken Oh, cause I need you to see That you are the reason
+    description                           : 
     fontawesome_icon_name                 : sync
 
   - title                                 : Support Any Web Browser
-    description                           : I'm not writer. There goes my hands shaking And you are the reason My heart keeps bleeding I need you now
+    description                           : 
     fontawesome_icon_name                 : adjust
   
-  - title                                 : Feature List
-    description                           : I'm not writer. The song was meant to be different at the beginning of writing process, telling the story of obstacles in love, but it transformed to be a beautiful ballad because love excels all of them after all.
+  - title                                 : Fast Rendered
+    description                           : 
     fontawesome_icon_name                 : star
 
   - title                                 : Fully Performance
-    description                           : I'm not writer. If I could turn back the clock I'd make sure the light defeated the dark I'd spend every hour, of every day Keeping you safe
+    description                           : 
     fontawesome_icon_name                 : arrow-alt-circle-down
 
-  - title                                 : Whatever
-    description                           : I'm not writer. I'd climb every mountain And swim every ocean Just to be with you And fix what I've broken Oh, cause I need you to see That you are the reason
+  - title                                 : Freely Available
+    description                           : 
     fontawesome_icon_name                 : link
 
   - title                                 : Keep Calm
-    description                           : I'm not writer. I don't wanna fight no more I don't wanna hide no more I don't wanna cry no more Come back I need you to hold me (You are the reason) Come a little closer now Just a little closer now Come a little closer I need you to hold me tonight
+    description                           : 
     fontawesome_icon_name                 : info-circle
 
   - title                                 : # New Feature Title
